Implementaçao de editar dados de utilizador, e ajustes em funçoes dependentes